--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.1",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router-devtools": "^1.114.32",
     "@tanstack/router-plugin": "^1.114.32",
     "@tauri-apps/cli": "^2",
