--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,5 @@ serde_json = "1"
 ollama-rs = { version = "0.3.0", features = ["stream"] }
 tokio = { version = "1.44.1", features = ["full"] }
 tokio-stream = "0.1.17"
+sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono"] }
+uuid = { version = "1.14.0", features = ["v4", "fast-rng"] }
