--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.1.1",
+    "@tanstack/react-query": "^5.72.0",
     "@tanstack/react-router": "^1.114.32",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
